[package]
name = "solana-ix-collection"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = "0.23"
# env_logger = "0.11.8"
base64 = "0.22"
tokio-stream = "0.1.18"
futures-util = { version = "0.3.31" }
pretty_env_logger = "0.5.0"
borsh = "1.6.0"
serde = "1.0.228"
async-trait = "0.1.89"
rand = "0.9.2"
reqwest = "0.12.28"
bincode = "1.3.3"
teloxide = { version = "0.17.0", features = ["macros"] }
jito-sdk-rust = "0.2.2"
serde_json = "1.0.149"
tokio = "1.49.0"
chrono = "0.4.43"
log = "0.4.29"
anyhow = "1.0.100"
grpc-client = { git = "https://github.com/miaomiaowu0428/grpc-client.git" }
solana-tx-parser = { git = "https://github.com/miaomiaowu0428/solana-tx-parser.git" }
utils = { git = "https://github.com/miaomiaowu0428/sol-utils.git" }
dotenvy = "0.15.7"
hex = "0.4.3"
sled = "0.34"
solana-sdk = "3.0.0"
solana-client = "3.1.8"
yellowstone-grpc-proto = "10.1.1"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
solana-sdk-ids = "3.1.0"
solana-system-interface = "2.0.0"
solana-commitment-config = "3.1.0"
rand_chacha = "0.9.0"
rand_core = "0.9.5"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
hashbrown = "0.15.5"
dashmap = "6.1.0"
once_cell = "1.21.3"
solana-nonce = "3.0.0"
solana-address-lookup-table-interface = "3.0.1"
solana-transaction-status-client-types = "3.1.8"
yellowstone-grpc-client = "10.2.0"
solana-entry = "3.1.8"
prost = "0.13"
futures = "0.3.31"
rayon = "1.11.0"
paste = "1.0.15"
unshred = { git="https://github.com/miaomiaowu0428/unshred.git" }
tokio-util = { version = "0.7.18", features = ["codec"] }
unshred-client-lib = { git = "https://github.com/miaomiaowu0428/unshred-client-lib.git" }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
const-hex = "1.17.0"
arrayvec = "0.7.6"
arc-swap = "1.8.0"
transaction-monitor = { git = "https://github.com/miaomiaowu0428/transaction-monitor.git" }
transaction-cache= { git = "https://github.com/miaomiaowu0428/transaction-cache.git" }
